--- a/css/creative.css
+++ b/css/creative.css
@@ -11,7 +11,7 @@ body {
 hr {
   max-width: 50px;
   border-width: 3px;
-  border-color: #F05F40;
+  border-color: #30426a;
 }
 
 hr.light {
@@ -39,7 +39,7 @@ h6 {
 }
 
 .bg-primary {
-  background-color: #F05F40 !important;
+  background-color: #30426a !important;
 }
 
 .bg-dark {
@@ -169,7 +169,7 @@ img::-moz-selection {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: url("../img/header2.jpg");
+  background-image: url("../img/header-baton3.jpg");
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -282,7 +282,7 @@ header.masthead p {
 }
 
 .text-primary {
-  color: #F05F40 !important;
+  color: #30426a !important;
 }
 
 .btn {
@@ -298,7 +298,7 @@ header.masthead p {
 }
 
 .btn-primary {
-  background-color: #F05F40;
+  background-color: #30426a;
   border-color: #F05F40;
 }
 
